fixed folders alignment

--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -196,23 +196,19 @@ img{
 	height:3rem;
 }
 
-.media-folders{
-	width:4rem;
-	height:4rem;
-}
-
 /* folders-size */
 .folders{
 	font-family:var(--secondary-font);
 	font-size:var(--h3-mobile);
 	text-align:center;
+	display:inline;
 }
 
 /* folder flex */
 .flex-folder-container{
-	/* display:flex; */
-	flex-direction:row;
-	gap:calc(var(--padding-m) * 2);
+	display:flex;
+	flex-direction:column;
+	gap:var(--padding-s);
 	padding:1rem;
 }
 
@@ -349,14 +345,17 @@ img{
 }
 
 
-/* folder icon size */
-.media-folders{
-	width:50px;
-	height:50px;
-}
-
 
 @media (min-width:1280px){
+
+.popupContainer{
+	padding:1rem;
+	position:fixed;
+	width:auto;
+	left:50%;
+	top:3%;
+	transform: translate(-50%,0)
+}
 
 .icons{
 	width:3.5rem;
@@ -402,6 +401,11 @@ p{
 	font-family:var(--secondary-font);
 }
 
+/* folder size */
+.media-folders{
+	width:4rem;
+	height:3.5rem;
+}
 
 /* folder open/close state */
 .media-folders.closed-folder {
@@ -478,8 +482,9 @@ p{
 /* folder flex */
 .flex-folder-container{
 	display:flex;
-	flex-direction:row;
-	gap:1rem;
+	flex-direction:column;
+	padding:1rem;
+	max-width:fit-content;
 }
 
 /* popup-message-01*/
